--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ Desktop.ini
 
 *.log
 *.tmp
+
+results/experiments/
+results/plots/
+
+# Temporary - exclude experiment scripts
+experiments/run_experiments.py
+experiments/plot_results.py
