--- a/config/gridworld_warehouse_small.yaml
+++ b/config/gridworld_warehouse_small.yaml
@@ -48,15 +48,15 @@ create_gridworld_node:
       2, 23, 0, 5, 24, 0      # Divider between induct stations 3-4
     ]
     
-    # Agent positions - Flattened array format
-    # Each agent position: [x, y, z]
+    # Agent positions and IDs - Flattened array format
+    # Each agent: [x, y, z, agent_id]
     agent_positions: [
-      6, 4, 0,      # Agent 0 (near induct zone)
-      6, 12, 0,     # Agent 1 (near induct zone)
-      6, 20, 0,     # Agent 2 (near induct zone)
-      18, 12, 0,    # Agent 3 (central zone)
-      19, 15, 0,    # Agent 4 (near storage zone)
-      19, 8, 0      # Agent 5 (near storage zone)
+      6, 4, 0, 1,      # Agent 1 (near induct zone)
+      6, 12, 0, 2,     # Agent 2 (near induct zone)
+      6, 20, 0, 3,     # Agent 3 (near induct zone)
+      18, 12, 0, 4,    # Agent 4 (central zone)
+      19, 15, 0, 5,    # Agent 5 (near storage zone)
+      19, 8, 0, 6      # Agent 6 (near storage zone)
     ]
     
     # Induct (entry) stations - Truck docking bays
