--- a/config/gridworld_warehouse_small.yaml
+++ b/config/gridworld_warehouse_small.yaml
@@ -117,6 +117,20 @@ create_gridworld_node:
       19, 26, 0, 38
     ]
     
+    # Charging stations - Dedicated docking cells inside the maintenance bay
+    # Flattened array format: [x, y, z, station_id]
+    # Located at x=26 (left edge of maintenance bay), accessible from x=25
+    # 6 stations for 6 agents so all can charge without corridor congestion
+    # Cells overwrite the obstacle marking, so no obstacle_regions change needed
+    charging_stations: [
+      26, 5, 0, 1,     # Charging Station 1
+      26, 8, 0, 2,     # Charging Station 2
+      26, 11, 0, 3,    # Charging Station 3
+      26, 14, 0, 4,    # Charging Station 4
+      26, 20, 0, 5,    # Charging Station 5
+      26, 23, 0, 6     # Charging Station 6
+    ]
+
     # Visualization settings
     visualization:
       # Node visualization
